# masters-thesis

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.x86  README.md
docker/: run.sh
eval/: math.metrics.xlsx  math.runtime.xlsx  metrics.py  pyvenv.cfg  roman_123.metrics.xlsx  roman_123.runtime.xlsx  runtime.py
eval/old/: math.xlsx
osage/: annotate.py  obfuscate.sh  run.sh
pass/: CMakeLists.txt
pass/annotation/: Annotation.cpp  CMakeLists.txt
pass/base-annotated-pass/: BaseAnnotatedPass.cpp  CMakeLists.txt
pass/bogus-switch/: BogusSwitch.cpp  CMakeLists.txt
pass/flatten/: CMakeLists.txt  Flatten.cpp
pass/function-merge/: CMakeLists.txt  FunctionMerge.cpp
pass/mba/: CMakeLists.txt  MBA.cpp
pass/skeleton/: Annotation.cpp  CMakeLists.txt  Skeleton.cpp
